<resources>
    <string name="app_name">Servizi</string>
    <string name="image">image</string>
    <string name="user">User</string>
    <string name="technician">Technician</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="terms_condition">By creating an account you agree to our Terms of Service and PrivacyPolicy</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_technician_main">TechnicianMainActivity</string>
    <string name="todo">TODO</string>
    <string name="tab_text_1">Login</string>
    <string name="tab_text_2">Register</string>
    <string name="register_as_a_technician">Register as a Technician</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="create_password">Create password</string>
    <string name="repeat_password">Re_Enter password</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="best_solution_for_every_house_problems">Best solution for every house problems</string>
    <string name="national_id">National ID</string>
    <string name="already_have_an_account">Already have an account? \t<b><u>LOGIN</u></b> </string>
    <string name="register">Register</string>
    <string name="CairoString">Cairo</string>
    <string name="WeightString">Weight</string>
    <string name="VolumeString">Volume</string>
    <string name="SpeedString">Speed</string>
    <string name="LengthString">Length</string>
    <string name="AreaString">Area</string>
    <string name="EnergyString">Energy</string>
    <string name="PressureString">Pressure</string>
    <string name="MemoryString">Memory</string>
    <string name="city">City</string>
    <string name="governorate">Governorate</string>
    <string name="register_as_a_User">Register as a User</string>
    <string name="birth_date">Birth Date \'YYYY-MM-DD\'</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_userPhone">Not a valid Phone Number</string>
    <string name="invalid_password">Password must be >= 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_to">Welcome to</string>
    <string name="servizi">Servizi</string>
    <string name="sign_up_as">Register As</string>
    <string name="or">Or</string>
    <string name="carpenter">Carpenter</string>
    <string name="plumber">Plumber</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="electrician">Electrician</string>
    <string name="painting_work">Painting Work</string>
    <string name="car_mechanic">Car Mechanic</string>
    <string name="profession">Profession</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="book">Book</string>
    <string name="technician_name">Technician Name</string>
    <string name="rating">Rating</string>
    <string name="location">Location</string>
    <string name="no_technicians_found">No Technicians Found</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="log_out">Log out</string>
    <string name="version">V 1.0.0</string>
    <string name="update_location">Update Location</string>
    <string name="enter">Enter</string>
    <string name="edit_address">Edit Address</string>
    <string name="clint_name">Clint Name</string>
    <string name="clint">Clint</string>
    <string name="comment">No Comment</string>
    <string name="date">Date :</string>
    <string name="reviews">Reviews</string>
    <string name="select_date_and_time_of_the_visit">Select Date and Time of the visit</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="id">Id</string>
    <string name="status">Status</string>
    <string name="address">Address</string>
    <string name="ID">ID:</string>
    <string name="Date">Date:</string>
    <string name="duration">Duration:</string>
    <string name="Description">Description:</string>
    <string name="Address">Address:</string>
    <string name="tru">True</string>
    <string name="Reviewed">Reviewed:</string>
    <string name="Status">Status:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="about">About Us</string>
    <string name="about_us1">
  The best experience with fixers that are very talented and you can easily review their portfolio and pick your fixer by other’s rating.
  </string>
    <string name="about_us2">
 Servizi will help you to pick the best route for your service if you want to meet them in person and show them what they’ll fix.
</string>
    <string name="about_us3">
 Servizi is the only service that will help you in fixing your stuff and locating the places you want them to get fixed in.
    </string>
    <string name="about_us4">
 You can easily choose your service based on previous customer ratings, location, and category. You can too, review them.
    </string>
    <string name="about_us5">
 We will help you with a pricing system that will listen to your problem first, responds with details about the problem and then gives you the most convenient price to fix your damaged stuff.
    </string>
    <string name="about_us6">
 We did our research and evaluated our fixers so don’t worry your things are safe with us
    </string>
</resources>