<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="appointment"
            type="com.example.servizi.user.model.Appointment" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/dark_background"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_userImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_item_profession"
                style="@style/Theme.Servizi.TextView"
                Text="@{appointment.technician.profession}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/profession"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_userImage"
                app:layout_constraintTop_toTopOf="@id/iv_userImage" />

            <TextView
                android:id="@+id/location"
                Text="@{appointment.technician.city}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/iv_userImage"
                android:text="@string/location"
                app:drawableStartCompat="@drawable/ic_location_on_24"
                app:layout_constraintStart_toStartOf="@id/tv_item_profession"
                app:layout_constraintTop_toBottomOf="@id/tv_item_profession" />

            <TextView
                android:id="@+id/cancel_date"
                Text="@{appointment.date}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="@id/iv_userImage"
                app:layout_constraintTop_toBottomOf="@id/iv_userImage" />

            <TextView
                android:id="@+id/cancel_time"
                Text="@{appointment.duration}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_toEndOf="@id/iv_userImage"
                android:text="@string/time"
                app:layout_constraintBottom_toBottomOf="@id/cancel_date"
                app:layout_constraintStart_toEndOf="@id/cancel_date"
                app:layout_constraintTop_toTopOf="@id/cancel_date" />

            <TextView
                android:id="@+id/id"
                style="@style/Theme.Servizi.TextView"
                TextNumber="@{appointment.id}"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_toEndOf="@id/iv_userImage"
                android:text="@string/id"
                app:layout_constraintBottom_toBottomOf="@id/tv_item_profession"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_item_profession" />

            <TextView
                android:id="@+id/status_order"
                Text="@{appointment.status}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/dark_background"
                android:paddingVertical="8dp"
                android:text="@string/status"
                android:textAlignment="center"
                android:textColor="?attr/colorSecondary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cancel_date" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>