<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#e2e2e2e2">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/main_background" />

        <ImageView
            android:layout_width="280dp"
            android:layout_height="293dp"
            android:layout_gravity="right"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/image"
            android:scaleType="fitEnd"
            android:src="@drawable/img"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="110dp"
            android:contentDescription="@string/image"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/text"
            tools:ignore="RtlSymmetry" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_user"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/user"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_technician"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_button"
        android:text="@string/technician"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_user" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/terms_condition"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>